# aft

./: .config  .gitignore  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  aft-relay.service  install.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
aft/: Cargo.toml
aft-crypto/: Cargo.toml
aft-crypto/src/: bip39.rs  data.rs  errors.rs  exchange.rs  lib.rs  password_encryption.rs  password_generator.rs
aft/src/: clients.rs  config.rs  constants.rs  database.rs  downloader.rs  errors.rs  main.rs  relay.rs  sender.rs  server.rs  utils.rs
assets/fail2ban/: aft-relay-filter.conf  aft-relay.conf
docs/: CONFIG.md  PROTOCOL.md
scripts/: db_startup.sh
