[package]
name = "aft-crypto"
version = "1.2.1"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
rand_core = {version = "0.6", default-features = false, features=["getrandom"]}
aes-gcm = "0.10"
x25519-dalek = "2"
scrypt = "0.11"
rand = "0.8"
zeroize = "1.6"
