[package]
name = "aft-crypto"
version = "1.2.5"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository = "https://github.com/dd-dreams/aft/tree/master/aft-crypto"
description = "Cryptography library for aft."

[dependencies]
rand_core = {version = "0.6", default-features = false, features=["getrandom"]}
aes-gcm = "0.10"
x25519-dalek = "2"
rand = "0.8"
zeroize = "1.8"
