[package]
name = "aft"
version = "4.0.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["io-std", "io-util", "net", "sync", "rt-multi-thread", "macros"]}
env_logger = "0.10"
json = "0.12"
log = "0.4"
sha2 = "0.10"
tokio-postgres = "0.7"
rpassword = "7.2"
aft-crypto = {path = "../aft-crypto" }
